Trigger-App: Bot menu structure totally refactored. Bot request handler refactored. Created query service class. Added new methods ot triggers and currency services.